--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/animejs": "^3.1.12",
+    "animejs": "^3.2.2",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.5.4",
     "three": "^0.170.0",
     "vue": "^3.5.12"
   },
