--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "clsx": "^2.1.1",
     "tailwind-merge": "^2.5.4",
     "three": "^0.170.0",
-    "vue": "^3.5.12"
+    "vue": "^3.5.12",
+    "vue3-marquee": "^4.2.2"
   },
   "devDependencies": {
     "@types/three": "^0.169.0",
